[package]
name = "zero2Prod"
version = "0.1.0"
edition = "2021"

[lib]
path="src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2Prod"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
reqwest = "0.11"

[dependencies]
actix-web="4"
tokio={version="1.0",features=["macros","rt-multi-thread"]}
serde={version="1", features=["derive"]}
